<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".General.Fragment.OptionDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/TextGeneral"
        android:text="@string/question_coach" />

    <RadioGroup
        android:id="@+id/radiogroup_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radiobutton_saf"
            style="@style/ButtonGeneral"
            android:text="@string/sir_alex_ferguson"
            />

        <RadioButton
            android:id="@+id/radiobutton_mou"
            style="@style/ButtonGeneral"
            android:text="@string/jose_mourinho"
            />

        <RadioButton
            android:id="@+id/radiobutton_lvg"
            style="@style/ButtonGeneral"
            android:text="@string/louis_van_gaal"
            />

        <RadioButton
            android:id="@+id/radiobutton_moyes"
            style="@style/ButtonGeneral"
            android:text="@string/david_moyes"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_close"
            style="@style/ButtonGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.5"
            android:text="@string/close"
            />

        <Button
            android:id="@+id/button_choose"
            style="@style/ButtonGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="0.5"
            android:text="@string/choose"
            />

    </LinearLayout>

</LinearLayout>