<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Navigation.FragmentNavigation.DetailCategoryFragmentNavigation">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textview_category_name_two"
        style="@style/TextGeneral"
        android:text="@string/category_name" />

    <TextView
        android:id="@+id/textview_category_description_two"
        style="@style/TextGeneral"
        android:text="@string/category_description"
        />

    <Button
        android:id="@+id/button_back_navigation"
        style="@style/ButtonGeneral"
        android:text="@string/to_home"
        />

</LinearLayout>